--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-rate-limit": "^5.5.0",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
+    "minimist": "1.2.6",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.0",
