--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "minimist": "1.2.6",
     "mongoose": "^6.0.11",
     "morgan": "^1.10.0",
+    "node-fetch": "2.6.7",
     "nodemailer": "^6.7.0",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
