--- a/package.json
+++ b/package.json
@@ -1,51 +1,53 @@
 {
-  "name": "instaracsoback",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest",
-    "tsc": "tsc",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
-    "prod": "tsc && node ./dist/app.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/express-rate-limit": "^5.1.3",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^16.11.0",
-    "@types/passport": "^1.0.7",
-    "bcrypt": "^5.0.1",
-    "cloudinary": "^1.27.1",
-    "cors": "^2.8.5",
-    "crypto": "^1.0.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.5.0",
-    "helmet": "^4.6.0",
-    "jsonwebtoken": "^8.5.1",
-    "minimist": "1.2.6",
-    "mongoose": "^6.0.11",
-    "morgan": "^1.10.0",
-    "node-fetch": "2.6.7",
-    "nodemailer": "^6.7.0",
-    "passport": "^0.5.0",
-    "passport-jwt": "^4.0.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.4",
-    "xss": "^1.0.10"
-  },
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.5.0",
-    "jest": "^27.4.5",
-    "supertest": "^6.1.6"
-  }
+    "name": "instaracsoback",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "tsc": "tsc",
+        "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
+        "prod": "tsc && node ./dist/app.js",
+        "test": "NODE_ENV=test jest --testTimeout=10000 --detectOpenHandles"
+    },
+    "author": "",
+    "type": "module",
+    "license": "ISC",
+    "dependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/express-rate-limit": "^5.1.3",
+        "@types/jsonwebtoken": "^8.5.5",
+        "@types/morgan": "^1.9.3",
+        "@types/node": "^16.11.0",
+        "@types/passport": "^1.0.7",
+        "bcrypt": "^5.0.1",
+        "cloudinary": "^1.27.1",
+        "cors": "^2.8.5",
+        "crypto": "^1.0.1",
+        "dotenv": "^10.0.0",
+        "express": "^4.17.1",
+        "express-rate-limit": "^5.5.0",
+        "helmet": "^4.6.0",
+        "jest": "^28.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "minimist": "1.2.6",
+        "mongoose": "^6.0.11",
+        "morgan": "^1.10.0",
+        "node-fetch": "2.6.7",
+        "nodemailer": "^6.7.0",
+        "passport": "^0.5.0",
+        "passport-jwt": "^4.0.0",
+        "ts-jest": "^28.0.2",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^4.4.4",
+        "xss": "^1.0.10"
+    },
+    "devDependencies": {
+        "@types/jest": "^27.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.7.0",
+        "@typescript-eslint/parser": "^5.7.0",
+        "eslint": "^8.5.0",
+        "supertest": "^6.2.3"
+    }
 }
