--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "tsc": "tsc",
         "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
