--- a/.github/workflows/heroku.yaml
+++ b/.github/workflows/heroku.yaml
@@ -14,5 +14,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "manage-salary-app" #Must be unique in Heroku
+          heroku_app_name: "manage-salary-back" #Must be unique in Heroku
           heroku_email: "oscaremiliolugo@gmail.com"
