--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "tsc": "tsc",
-        "start": "node dist/app.js",
+        "start": "nodemon src/app.ts",
         "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
         "prod": "tsc && node ./dist/app.js",
         "test": "NODE_ENV=test jest --testTimeout=100000",
