--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "morgan": "^1.10.0",
         "nodemailer": "^6.9.2",
         "passport": "^0.5.0",
+        "passport-headerapikey": "^1.2.2",
         "passport-jwt": "^4.0.0",
         "supertest": "^6.3.3",
         "ts-node-dev": "^1.1.8",
