--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
             "src/*": ["./src/*"]
         }
     },
-    "exclude": ["node_modules"]
+
+    "include": ["src/**/*"],
+    "exclude": ["./node_modules", "./node_modules/*", "src/**/*.test.ts"]
 }
