--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
         "dotenv": "^10.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.0.1",
         "express": "^4.17.1",
         "express-rate-limit": "^5.5.0",
         "helmet": "^4.6.0",
