move test to outside and modify actions to use pnpm and node version 20.6.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
         }
     },
 
-    "include": ["src/**/*"],
-    "exclude": ["./node_modules", "./node_modules/*", "src/**/*.test.ts"]
+    "include": ["src/**/*", "test/**/*.test.ts"],
+    "exclude": ["./node_modules", "./node_modules/*"]
 }
