--- a/.github/workflows/test-action.yaml
+++ b/.github/workflows/test-action.yaml
@@ -28,6 +28,6 @@ jobs:
             - uses: pnpm/action-setup@v2
               with:
                   version: ${{ matrix.pnpm-version }}
-            - run: npm ci
-            - run: npm run build --if-present
-            - run: npm test
+            - run: pnpm i
+            - run: pnpm run build
+            # - run: pnpm test
