--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "eslint": "^8.0.1",
         "rimraf": "^4.4.0",
         "typescript": "*",
-        "vitest": "^0.31.1"
+        "vite-tsconfig-paths": "^4.3.1",
+        "vitest": "^1.2.2"
     }
 }
