--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
         "outDir": "dist",
         "sourceMap": true,
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@cronjobs/*": ["./src/cronjobs/*"]
         }
     },
 
