--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,9 @@ CLOUD_NAME
 CLOUD_KEY
 CLOUD_SECRET
 
-BINANCE_API_KEY
-BINANCE_SECRET_KEY
-BINANCE_HOST
+API_KEY=
+BINANCE_API_KEY=
+BINANCE_SECRET_KEY=
+BINANCE_HOST=
+
+
