--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "es2022",
         "module": "commonjs",
         "outDir": "dist",
         "sourceMap": true,
+        "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"],
-            "@cronjobs/*": ["./src/cronjobs/*"]
+            "@/*": ["src/*"],
+            "@cronjobs/*": ["src/cronjobs/*"]
         }
     },
 
